--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
 
-    <color name="grey">#1F1F1F</color>
+    <color name="balck">#FF000000</color>
+    <color name="grey">#FF212121</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
