--- a/app/src/main/res/layout-v21/activity_tool_bar.xml
+++ b/app/src/main/res/layout-v21/activity_tool_bar.xml
@@ -3,7 +3,7 @@
 <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/toolbar2"
+    android:id="@+id/personalized_toolBar"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
     android:background="?attr/colorPrimary"
@@ -16,9 +16,9 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="teste"
+        android:text="@string/app_name"
         android:textSize="17sp"
         android:gravity="center_vertical"
-        android:textColor="@color/balck"/>
+        android:textColor="@color/black"/>
 
 </androidx.appcompat.widget.Toolbar>
