--- a/app/src/main/res/layout/tool_bar.xml
+++ b/app/src/main/res/layout/tool_bar.xml
@@ -12,8 +12,7 @@
     app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
     android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
     tools:targetApi="lollipop"
-    android:onClick="optionsItemSelected"
-    app:menu="@menu/main">
+    app:menu="@menu/menu_main">
 
     <TextView
         android:layout_width="wrap_content"
