--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -77,34 +77,19 @@
 
             <Button
                 android:id="@+id/btn_search"
-                android:layout_width="150dp"
+                android:layout_width="wrap_content"
                 android:layout_height="60dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="40dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
                 android:onClick="LoadResult"
                 android:text="@string/btn_search"
-                app:layout_constraintEnd_toStartOf="@+id/btn_clear"
-                app:layout_constraintHorizontal_bias="0.47"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/edit_brand" />
 
-            <Button
-                android:id="@+id/btn_clear"
-                android:layout_width="150dp"
-                android:layout_height="60dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginTop="40dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginRight="16dp"
-                android:onClick="BtnClear"
-                android:text="@string/clear_bd"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/btn_search"
-                app:layout_constraintTop_toBottomOf="@+id/edit_brand" />
 
             <TextView
                 android:id="@+id/txt_result"
