--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -8,6 +8,11 @@
         app:showAsAction="never"/>
 
     <item
+        android:id="@+id/clearWindow"
+        android:title="@string/clear_window"
+        app:showAsAction="never"/>
+
+    <item
         android:id="@+id/clearDb"
         android:title="@string/clear_bd"
         app:showAsAction="never"/>
