--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,8 @@
     android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/white_light" >
 
     <include
         android:id="@+id/toolBar"
@@ -86,6 +87,7 @@
                 android:layout_marginRight="16dp"
                 android:onClick="LoadResult"
                 android:text="@string/btn_search"
+                android:textColorHighlight=" "
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/edit_brand" />
