--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,15 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="verde_agua">#32D7A5</color>
-    <color name="verde_escuro">#90BCB3</color>
-    <color name="purple">#6558F5</color>
+    <color name="royal_blue">#FF196F8C</color>
+    <color name="cerise">#FFE63561</color>
+    <color name="blue_crayola">#FF1CA9D9</color>
 
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-
+    <color name="white">#FFFFFFFF</color>
+    <color name="white_light">#FFF8F8F8</color>
     <color name="black">#FF000000</color>
     <color name="grey">#FF212121</color>
-    <color name="white">#FFFFFFFF</color>
 </resources>
