--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,13 +3,15 @@
     <style name="Theme.Maquiagem" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
 
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/verde_agua</item>
-        <item name="colorPrimaryVariant">@color/verde_escuro</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimary">@color/royal_blue</item>
+        <item name="colorPrimaryVariant">@color/cerise</item>
+        <item name="colorOnPrimary">@color/white_light</item>
+
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorSecondary">@color/royal_blue</item>
+        <item name="colorSecondaryVariant">@color/royal_blue</item>
         <item name="colorOnSecondary">@color/grey</item>
+
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
 
