Implementacao do Tema Noturno

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,8 +4,11 @@
     <color name="cerise">#FFE63561</color>
     <color name="blue_crayola">#FF1CA9D9</color>
 
+    <color name="cerise_dark">#FFCC2F56</color>
+
     <color name="white">#FFFFFFFF</color>
     <color name="white_light">#FFF8F8F8</color>
     <color name="black">#FF000000</color>
     <color name="grey">#FF212121</color>
+
 </resources>
