--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -17,4 +17,9 @@
         android:title="@string/clear_bd"
         app:showAsAction="never"/>
 
+    <item
+        android:id="@+id/alter_theme"
+        android:title="@string/change_theme"
+        app:showAsAction="never"/>
+
 </menu>
