--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,16 +1,26 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Theme.Maquiagem" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/royal_blue</item>
-        <item name="colorPrimaryVariant">@color/cerise</item>
-        <item name="colorOnPrimary">@color/grey</item>
+        <item name="colorPrimaryVariant">@color/cerise_dark</item>
+        <item name="colorOnPrimary">@color/white_light</item>
+
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
-        <item name="colorOnSecondary">@color/grey</item>
+        <item name="colorSecondary">@color/cerise</item>
+        <item name="colorSecondaryVariant">@color/royal_blue</item>
+        <item name="colorOnSecondary">@color/white_light</item>
+
+        <item name="android:textColorPrimary">@color/white_light</item>
+
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+
+        <!-- Desativa a ActionBar -->
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+
+
     </style>
 </resources>
