--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,6 +12,8 @@
         <item name="colorSecondaryVariant">@color/royal_blue</item>
         <item name="colorOnSecondary">@color/white_light</item>
 
+        <!-- Implementação do Light Theme. Definição do Background e Texto -->
+        <item name="android:windowBackground">@color/white_light</item>
         <item name="android:textColorPrimary">@color/black</item>
 
         <!-- Status bar color. -->
