--- a/app/src/main/res/layout/layout_result.xml
+++ b/app/src/main/res/layout/layout_result.xml
@@ -22,8 +22,8 @@
             android:layout_marginStart="35dp"
             android:layout_marginLeft="35dp"
             android:layout_marginTop="18dp"
-            android:layout_marginEnd="15dp"
-            android:layout_marginRight="15dp"
+            android:layout_marginEnd="35dp"
+            android:layout_marginRight="35dp"
             android:text="@string/app_name"
             android:textSize="22sp"
             android:textStyle="bold"
@@ -38,8 +38,8 @@
             android:layout_marginStart="35dp"
             android:layout_marginLeft="35dp"
             android:layout_marginTop="10dp"
-            android:layout_marginEnd="15dp"
-            android:layout_marginRight="15dp"
+            android:layout_marginEnd="35dp"
+            android:layout_marginRight="35dp"
             android:text="@string/price_currency"
             android:textSize="20sp"
             android:textStyle="bold"
@@ -54,8 +54,8 @@
             android:layout_marginStart="35dp"
             android:layout_marginLeft="35dp"
             android:layout_marginTop="16dp"
-            android:layout_marginEnd="15dp"
-            android:layout_marginRight="15dp"
+            android:layout_marginEnd="35dp"
+            android:layout_marginRight="35dp"
             android:text="@string/edit_type"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -69,8 +69,8 @@
             android:layout_marginStart="35dp"
             android:layout_marginLeft="35dp"
             android:layout_marginTop="12dp"
-            android:layout_marginEnd="15dp"
-            android:layout_marginRight="15dp"
+            android:layout_marginEnd="35dp"
+            android:layout_marginRight="35dp"
             android:paddingBottom="10dp"
             android:text="@string/description"
             android:textSize="16sp"
@@ -86,7 +86,7 @@
             android:layout_marginTop="15dp"
             android:layout_marginEnd="50dp"
             android:layout_marginRight="50dp"
-            android:background="@color/grey"
+            android:background="@color/cerise"
             android:focusable="false"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
