--- a/app/src/main/res/layout/layout_result.xml
+++ b/app/src/main/res/layout/layout_result.xml
@@ -33,8 +33,6 @@
             android:id="@+id/product_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginLeft="5dp"
             android:layout_marginTop="15dp"
             android:layout_marginEnd="20dp"
             android:layout_marginRight="20dp"
@@ -49,9 +47,7 @@
             android:id="@+id/currency_price"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="10dp"
             android:layout_marginEnd="20dp"
             android:layout_marginRight="20dp"
             android:text="@string/currencyPrice_product"
@@ -65,9 +61,7 @@
             android:id="@+id/type_brand"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="10dp"
             android:text="@string/type_product"
             android:textSize="18sp"
             app:layout_constraintStart_toEndOf="@+id/imageProduct"
@@ -77,14 +71,15 @@
             android:id="@+id/content_typeBrand"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
+            android:layout_marginStart="3dp"
+            android:layout_marginLeft="3dp"
             android:layout_marginEnd="20dp"
             android:layout_marginRight="20dp"
             android:text="@string/fill_text"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/type_brand"
-            app:layout_constraintTop_toBottomOf="@+id/currency_price" />
+            app:layout_constraintStart_toStartOf="@+id/type_brand"
+            app:layout_constraintTop_toBottomOf="@+id/type_brand" />
 
         <TextView
             android:id="@+id/description"
@@ -92,7 +87,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="35dp"
             android:layout_marginLeft="35dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="10dp"
             android:text="@string/description_product"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -102,14 +97,15 @@
             android:id="@+id/content_description"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
+            android:layout_marginStart="3dp"
+            android:layout_marginLeft="3dp"
             android:layout_marginEnd="20dp"
             android:layout_marginRight="20dp"
             android:text="@string/fill_text"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/description"
-            app:layout_constraintTop_toBottomOf="@+id/content_typeBrand" />
+            app:layout_constraintStart_toStartOf="@+id/description"
+            app:layout_constraintTop_toBottomOf="@+id/description" />
 
 
         <View
@@ -126,7 +122,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/description"
+            app:layout_constraintTop_toBottomOf="@+id/content_description"
             app:layout_constraintVertical_bias="0.0" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
