--- a/app/src/main/res/layout/layout_result.xml
+++ b/app/src/main/res/layout/layout_result.xml
@@ -12,17 +12,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:paddingTop="20dp">
+        android:paddingTop="25dp"
+        android:paddingBottom="10dp">
 
 
         <ImageView
             android:id="@+id/imageProduct"
-            android:layout_width="151dp"
-            android:layout_height="111dp"
+            android:layout_width="110dp"
+            android:layout_height="110dp"
             android:layout_gravity="start"
-            android:layout_marginStart="15dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginLeft="20dp"
             android:layout_weight="1"
             android:contentDescription="@string/description_imageProduct"
             app:layout_constraintStart_toStartOf="parent"
@@ -33,7 +33,8 @@
             android:id="@+id/product_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginLeft="5dp"
             android:layout_marginEnd="20dp"
             android:layout_marginRight="20dp"
             android:text="@string/name_product"
@@ -47,6 +48,8 @@
             android:id="@+id/currency_price"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginLeft="5dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="20dp"
             android:layout_marginRight="20dp"
@@ -58,35 +61,26 @@
             app:layout_constraintTop_toBottomOf="@+id/product_name" />
 
         <TextView
-            android:id="@+id/type_brand"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="@string/type_product"
-            android:textSize="18sp"
-            app:layout_constraintStart_toEndOf="@+id/imageProduct"
-            app:layout_constraintTop_toBottomOf="@+id/currency_price" />
-
-        <TextView
             android:id="@+id/content_typeBrand"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="3dp"
-            android:layout_marginLeft="3dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="10dp"
             android:layout_marginEnd="20dp"
             android:layout_marginRight="20dp"
             android:text="@string/fill_text"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/type_brand"
-            app:layout_constraintTop_toBottomOf="@+id/type_brand" />
+            app:layout_constraintStart_toEndOf="@+id/imageProduct"
+            app:layout_constraintTop_toBottomOf="@+id/currency_price" />
 
         <TextView
             android:id="@+id/description"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="35dp"
-            android:layout_marginLeft="35dp"
+            android:layout_marginStart="25dp"
+            android:layout_marginLeft="25dp"
             android:layout_marginTop="10dp"
             android:text="@string/description_product"
             android:textSize="16sp"
