--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Theme.Maquiagem" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/royal_blue</item>
         <item name="colorPrimaryVariant">@color/cerise</item>
@@ -13,8 +12,11 @@
         <item name="colorOnSecondary">@color/white_light</item>
 
         <!-- Implementação do Light Theme. Definição do Background e Texto -->
-        <item name="android:windowBackground">@color/white_light</item>
+        <item name="android:windowBackground">@color/white</item>
         <item name="android:textColorPrimary">@color/black</item>
+
+        <!-- Torna o Icone de Menu Branco -->
+        <item name="android:actionOverflowButtonStyle">@style/IconMenu_OverFlow</item>
 
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
@@ -22,6 +24,10 @@
         <!-- Desativa a ActionBar -->
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
-
     </style>
+
+    <style name="IconMenu_OverFlow" parent="@style/Widget.AppCompat.ActionButton.Overflow">
+        <item name="tintMode">@color/white</item>
+    </style>
+
 </resources>
