--- a/app/src/main/res/layout/activity_location.xml
+++ b/app/src/main/res/layout/activity_location.xml
@@ -40,6 +40,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolBar" />
 
+    <ImageButton
+        android:id="@+id/btn_showFragment"
+        style="@style/Widget.AppCompat.ImageButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:background="?attr/background"
+        android:contentDescription="@string/btn_showFragment"
+        app:layout_constraintEnd_toEndOf="@+id/txt_location"
+        app:layout_constraintTop_toBottomOf="@+id/txt_location"
+        app:srcCompat="@drawable/ic_keyboard_arrow_down" />
+
     <TextView
         android:id="@+id/txt_probablyError"
         android:layout_width="0dp"
