--- a/app/src/main/res/layout/layout_result.xml
+++ b/app/src/main/res/layout/layout_result.xml
@@ -102,18 +102,6 @@
             app:layout_constraintTop_toBottomOf="@+id/description" />
 
 
-        <FrameLayout
-            android:id="@+id/frame_fragment"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/content_description"
-            tools:layout="@layout/fragment_save_makeup">
-
-        </FrameLayout>
-
         <View
             android:id="@+id/view"
             android:layout_width="match_parent"
@@ -129,7 +117,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/frame_fragment"
+            app:layout_constraintTop_toBottomOf="@id/content_description"
             app:layout_constraintVertical_bias="0.0" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
