--- a/app/src/main/res/layout/activity_location.xml
+++ b/app/src/main/res/layout/activity_location.xml
@@ -46,11 +46,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:background="?attr/background"
+        android:background="?attr/colorOnPrimary"
         android:contentDescription="@string/btn_showFragment"
+        android:onClick="buttonFragment"
         app:layout_constraintEnd_toEndOf="@+id/txt_location"
         app:layout_constraintTop_toBottomOf="@+id/txt_location"
         app:srcCompat="@drawable/ic_keyboard_arrow_down" />
+
+    <FrameLayout
+        android:id="@+id/fragment_location"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_showFragment"
+        tools:layout="@layout/fragment_feedback_location">
+
+    </FrameLayout>
 
     <TextView
         android:id="@+id/txt_probablyError"
