--- a/app/src/main/res/layout/fragment_feedback_location.xml
+++ b/app/src/main/res/layout/fragment_feedback_location.xml
@@ -7,7 +7,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/light_grey">
 
     <RadioGroup
         android:id="@+id/group_rbtnLocation"
@@ -20,8 +21,6 @@
             android:id="@+id/rbtn_wrongLocation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="25dp"
-            android:layout_marginRight="25dp"
             android:text="@string/rbtn_wrongLocation" />
 
         <RadioButton
