--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="white_light">#FFF8F8F8</color>
     <color name="black">#FF000000</color>
-    <color name="grey">#FF212121</color>
 
+    <color name="grey">#FF212121</color>
+    <color name="light_grey">#FFD3D3D3</color>
 </resources>
