Implementação da Custom View e Widget

--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -26,5 +26,10 @@
 
     </style>
 
+    <style name="ThemeOverlay.Maquiagem.AppWidgetContainer" parent="">
+        <item name="appWidgetBackgroundColor">@color/light_blue_900</item>
+        <item name="appWidgetTextColor">@color/light_blue_200</item>
+    </style>
+
 
 </resources>
