--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -27,10 +27,14 @@
     </style>
 
 
-
     <!-- Cor do Icon Menu -->
     <style name="IconMenu_OverFlow" parent="@style/Widget.AppCompat.ActionButton.Overflow">
         <item name="tintMode">@color/white</item>
+    </style>
+
+    <style name="ThemeOverlay.Maquiagem.AppWidgetContainer" parent="">
+        <item name="appWidgetBackgroundColor">@color/light_blue_600</item>
+        <item name="appWidgetTextColor">@color/light_blue_50</item>
     </style>
 
 </resources>
